<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etLEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:ems="10"
        android:hint="@string/str_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etLPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etLEmail"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="227dp"
        android:ems="10"
        android:hint="@string/str_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLoginSubmit"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="186dp"
        android:text="@string/str_login" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnLoginSubmit"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="126dp"
        android:text="@string/str_signup" />
</RelativeLayout>