<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvLive"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:padding="3dp"
            android:textSize="42sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvcname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:padding="3dp"
            android:textSize="16sp"
            android:text="@string/str_cname"
            android:textColor="#333"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvctype"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="25dp"
            android:padding="3dp"
            android:textSize="13sp"
            android:text="@string/str_ctype"
            android:textColor="@color/colorDkGrey"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvcavgtime"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="54dp"
            android:textAlignment="center"
            android:padding="3dp"
            android:background="@color/colorLightGrey"
            android:text="@string/str_avgtime"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tvcrating"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="195dp"
            android:padding="3dp"
            android:textAlignment="center"
            android:layout_marginTop="54dp"
            android:background="@color/colorLightGrey"
            android:text="@string/str_crating"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

</LinearLayout>
