<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClinicSelectActivity$PlaceholderFragment">

    <!-- FRAGEMENT ONE CONTENT (CLINIC INFORMATION) -->
    <TextView
        android:id="@+id/txtcaddr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textSize="18sp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:text="@string/str_caddr"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />
    <TextView
        android:id="@+id/txtcpplcount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textSize="50sp"
        android:gravity="center_horizontal"
        android:text="@string/str_0"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />
    <TextView
        android:id="@+id/txtcppl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:text="@string/str_people_ahead"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>